# openpi-thor

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.codex/skills/openpi-thor-development/: SKILL.md
scripts/: patch_host_openpi.py
src/openpi_thor/: __init__.py  _schema.py  calibration.py  cli.py  compat.py  convert.py  debug_nvfp4.py  doctor.py  engine.py  export.py  host_integration.py  runtime.py  server.py  trt_torch.py  validate.py  workflow.py
tests/: test_calibration.py  test_cli.py  test_compat.py  test_debug_nvfp4.py  test_docstrings.py  test_doctor.py  test_engine.py  test_export.py  test_host_integration.py  test_manual_pipeline.py  test_runtime.py  test_schema.py  test_validate.py
